--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sürpriz!</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
         body {
             display: flex;
@@ -80,7 +78,7 @@
     <button id="clickButton">BASMAYAN OC!</button>
     <div id="content">
         <h1>AKİF YARIN EKMEĞİNİN PEŞİNDE!</h1>
-        <iframe src="https://giphy.com/embed/3rPAeOR9sVpFvNGPtn" width="480" height="269" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/basketball-johnnysins-danidaniels-3rPAeOR9sVpFvNGPtn">AKLIMI KAYBEDİCEM YARDIM EDİN</a></p>
+        <iframe src="https://giphy.com/embed/EcpDU8b8cvtiAfY0m6" width="480" height="271" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/basketball-johnnysins-danidaniels-EcpDU8b8cvtiAfY0m6">BANA YARDIM EDİB LÜTFEN</a></p>
     </div>
     <canvas id="confetti"></canvas>
     <audio id="backgroundMusic" autoplay hidden>
