--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     </style>
 </head>
 <body>
-    <button id="clickButton">BASMAYAN OC!</button>
+    <button id="clickButton">Tıkla!</button>
     <div id="content">
-        <h1>AKİF YARIN EKMEĞİNİN PEŞİNDE!</h1>
-        <iframe src="https://giphy.com/embed/EcpDU8b8cvtiAfY0m6" width="480" height="271" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/basketball-johnnysins-danidaniels-EcpDU8b8cvtiAfY0m6">BANA YARDIM EDİB LÜTFEN</a></p>
+        <h1>Dünyanın en güzel kadını ödülünü siz kazandınız!</h1>
+        <iframe src="https://giphy.com/embed/26u4exk4zsAqPcq08" width="480" height="269" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/awkwafina-26u4exk4zsAqPcq08">KAZANDINIZ!</a></p>
     </div>
     <canvas id="confetti"></canvas>
     <audio id="backgroundMusic" autoplay hidden>
